--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -3,6 +3,108 @@
 
     <tr>
         <td>
+            <span class="date"><big><strong>2022</strong></big><br /></span>
+        </td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://www.researchgate.net/profile/Denis-Kotkov/publication/357255047_Rating_consistency_is_consistently_underrated_An_exploratory_analysis_of_movie-tag_rating_inconsistency/links/61c376a8c99c4b37eb171791/Rating-consistency-is-consistently-underrated-An-exploratory-analysis-of-movie-tag-rating-inconsistency.pdf">Rating Consistency is Consistently Underrated: An Exploratory Analysis of Movie-Tag Rating Inconsistency</a>.
+            </span><br />
+            <span class="authors">
+                Denis Kotkov, Alan Medlar, Umesh Satyal, Alexandr Maslov, Mats Neovius, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">SAC 2022</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://www.researchgate.net/profile/Denis-Kotkov/publication/357254796_The_Tag_Genome_Dataset_for_Books/links/61c37289abcb1b520ad8f27a/The-Tag-Genome-Dataset-for-Books.pdf">The Tag Genome Dataset for Books</a>
+            </span><br />
+            <span class="authors">
+                Denis Kotkov, Alan Medlar, Alexandr Maslov, Umesh Satyal, Mats Neovius, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">CHIIR 2022</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+
+    <tr>
+        <td>
+            <span class="date"><big><strong>2021</strong></big><br /></span>
+        </td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://dl.acm.org/doi/abs/10.1145/3459637.3482103">Exploratory Search of GANs with Contextual Bandits</a>.
+            </span><br />
+            <span class="authors">
+                Ivan Kropotov, Alan Medlar, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">CIKM 2021</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://arxiv.org/abs/2104.03776">Statistically Significant Detection of Semantic Shifts using Contextual Word Embeddings</a>.
+            </span><br />
+            <span class="authors">
+                Yang Liu, Alan Medlar, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">Eval4NLP</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://dl.acm.org/doi/abs/10.1145/3471158.3472234">Can Language Models Identify Wikipedia Articles with Readability and Style Issues?</a>.
+            </span><br />
+            <span class="authors">
+                Yang Liu, Alan Medlar, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">ICTIR 2021</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://dl.acm.org/doi/abs/10.1145/3406522.3446020">Query Suggestions as Summarization in Exploratory Search</a>.
+            </span><br />
+            <span class="authors">
+                Alan Medlar, Jing Li, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">CHIIR 2021</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+
+    <tr>
+        <td>
             <span class="date"><big><strong>2020</strong></big><br /></span>
         </td>
         <td class="publication">
